[project]
name = "python-scripts"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiodns",
    "aiohttp",
    "aioopenssl",
    "asyncio",
    "boto3",
    "gcloud-aio-auth",
    "gcloud-aio-storage",
    "google-auth",
    "google-cloud-compute",
    "google-cloud-iam",
    "google-cloud-resource-manager",
    "google-cloud-storage",
    "hypercorn",
    "oauth2client",
    "prettytable",
    "pillow",
    "pillow-heif",
    "PySocks",
    "quart",
    "wheel",
]

[tool.setuptools]
packages = []

